--- a/dreamrs/templates/base/base.html
+++ b/dreamrs/templates/base/base.html
@@ -178,6 +178,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
    <!-- jquery plugins here-->
    <script src="{% static 'js/jquery-1.12.1.min.js' %}"></script>
+   <!-- mon script de previsualisation de photo de profile-->
+   <script src="{% static 'js/myscript.js' %}"></script>
    <!-- popper js -->
    <script src="{% static 'js/popper.min.js' %}"></script>
    <!-- bootstrap js -->
