--- a/dreamrs/templates/pages/blog/single-blog.html
+++ b/dreamrs/templates/pages/blog/single-blog.html
@@ -36,7 +36,7 @@
                             <li>
                                 <a href="#">
                                     <i class="far fa-comments"></i>
-                                    {{ article.article_commentaire.all|length }} 
+                                    {{ article.article_commentaire.all|length }}
                                     Comment{{ article.article_commentaire.all|length|pluralize }}
                                 </a>
                             </li>
@@ -61,41 +61,49 @@
                         <div class="row">
                             <div
                                 class="col-lg-6 col-md-6 col-12 nav-left flex-row d-flex justify-content-start align-items-center">
-                                <div class="thumb">
-                                    <a href="#">
-                                        <img class="img-fluid" src="{% static 'img/post/preview.png' %}" alt="">
-                                    </a>
-                                </div>
-                                <div class="arrow">
-                                    <a href="#">
-                                        <span class="lnr text-white ti-arrow-left"></span>
-                                    </a>
-                                </div>
-                                <div class="detials">
-                                    <p>Prev Post</p>
-                                    <a href="#">
-                                        <h4>Space The Final Frontier</h4>
-                                    </a>
-                                </div>
+
+                                {% if prev_article %}
+                                  <div class="thumb">
+                                      <a href="{% url 'single' prev_article.id %}">
+                                          <img class="img-fluid" src="{{ prev_article.image.url }}" alt="">
+                                      </a>
+                                  </div>
+                                  <div class="arrow">
+                                      <a href="{% url 'single' prev_article.id %}">
+                                          <span class="lnr text-white ti-arrow-left"></span>
+                                      </a>
+                                  </div>
+                                  <div class="detials">
+                                      <p>Prev Post</p>
+                                      <a href="{% url 'single' prev_article.id %}">
+                                          <h4>{{ prev_article.titre|truncatechars:20 }}</h4>
+                                      </a>
+                                  </div>
+                                {% endif %}
+
                             </div>
                             <div
                                 class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end align-items-center">
-                                <div class="detials">
-                                    <p>Next Post</p>
-                                    <a href="#">
-                                        <h4>Telescopes 101</h4>
-                                    </a>
-                                </div>
-                                <div class="arrow">
-                                    <a href="#">
-                                        <span class="lnr text-white ti-arrow-right"></span>
-                                    </a>
-                                </div>
-                                <div class="thumb">
-                                    <a href="#">
-                                        <img class="img-fluid" src="{% static 'img/post/next.png' %}" alt="">
-                                    </a>
-                                </div>
+
+                                {% if next_article %}
+                                  <div class="detials">
+                                      <p>Next Post</p>
+                                      <a href="{% url 'single' next_article.id %}">
+                                          <h4>{{ next_article.titre|truncatechars:20 }}</h4>
+                                      </a>
+                                  </div>
+                                  <div class="arrow">
+                                      <a href="{% url 'single' next_article.id %}">
+                                          <span class="lnr text-white ti-arrow-right"></span>
+                                      </a>
+                                  </div>
+                                  <div class="thumb">
+                                      <a href="{% url 'single' next_article.id %}">
+                                          <img class="img-fluid" src="{{ next_article.image.url }}" alt="">
+                                      </a>
+                                  </div>
+                                {% endif %}
+
                             </div>
                         </div>
                     </div>
@@ -166,7 +174,7 @@
                                     <button type="button" class="button button-contactForm">Connectez vous içi</button>
                                 </a>
                             {% endif %}
-                            
+
                         </div>
                     </form>
                 </div>
